--- a/notebooks/02_pixelated_ptycho_contrast_transfer.ipynb
+++ b/notebooks/02_pixelated_ptycho_contrast_transfer.ipynb
@@ -699,7 +699,7 @@
    ],
    "source": [
     "#| label: app:pixelated_icom_and_ptycho\n",
-    "# Pixelated Detectors\n",
+    "# iCOM and Iteratice Ptycho with Pixelated Detectors\n",
     "display(\n",
     "    ipywidgets.VBox(\n",
     "        [\n",
