--- a/notebooks/03_ssb_contrast_transfer.ipynb
+++ b/notebooks/03_ssb_contrast_transfer.ipynb
@@ -519,7 +519,7 @@
    "source": [
     "with plt.ioff():\n",
     "    dpi=72\n",
-    "    fig, axs = plt.subplots(2,4,figsize=(640/dpi,360/dpi),dpi=dpi)\n",
+    "    fig, axs = plt.subplots(2,4,figsize=(640/dpi,400/dpi),dpi=dpi)\n",
     "\n",
     "empty = np.zeros((n,n))\n",
     "empty[0,0] = 1\n",
@@ -536,16 +536,6 @@
     "ax_ctf_rad = axs[0,3]\n",
     "plot_ctf_pixelated = ax_ctf_rad.plot(q_bins_pixelated,I_bins_pixelated,color='k',label='pixelated')[0]\n",
     "plot_ctf = ax_ctf_rad.plot(np.linspace(0,q_max,n//2 + 1),np.zeros(n//2 + 1),color=ssb_line_color,label='annular')[0]\n",
-    "\n",
-    "ax_ctf_rad.set_ylim([0,1])\n",
-    "ax_ctf_rad.set_xlim([0,q_max])\n",
-    "ax_ctf_rad.vlines([q_probe/2,q_probe],0,2,colors='k',linestyles='--',linewidth=1,)\n",
-    "ax_ctf_rad.set_xticks([0,q_probe,q_max])\n",
-    "ax_ctf_rad.set_xticklabels([0,1,2])\n",
-    "ax_ctf_rad.set_yticks([])\n",
-    "ax_ctf_rad.set_xlabel(r\"spatial frequency, $q/q_{\\mathrm{probe}}$\")\n",
-    "# ax_ctf_rad.set_title(\"radially-averaged CTFs\")\n",
-    "ax_ctf_rad.legend()\n",
     "\n",
     "for ax, title in zip(\n",
     "    axs.flatten(),\n",
@@ -567,43 +557,59 @@
     "for ax in axs[0,:3]:\n",
     "    ctf.add_scalebar(ax,length=n//4,sampling=reciprocal_sampling,units=r'$q_{\\mathrm{probe}}$')\n",
     "\n",
+    "# remove y-ticks, add x-label, add vlines to radial avg. plot\n",
+    "ax_ctf_rad.set_ylim([0,1])\n",
+    "ax_ctf_rad.set_xlim([0,q_max])\n",
+    "ax_ctf_rad.vlines([q_probe/2,q_probe],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "ax_ctf_rad.set_xticks([0,q_probe,q_max])\n",
+    "ax_ctf_rad.set_xticklabels([0,1,2])\n",
+    "ax_ctf_rad.set_yticks([])\n",
+    "ax_ctf_rad.set_aspect(2)\n",
+    "ax_ctf_rad.set_xlabel(r\"spatial frequency, $q/q_{\\mathrm{probe}}$\")\n",
+    "ax_ctf_rad.legend()\n",
+    "\n",
     "\n",
     "ax_white_noise_obj = axs[1,0]\n",
     "im_white_noise_obj = ax_white_noise_obj.imshow(\n",
     "    np.zeros((n,n)),vmin=0,vmax=1,\n",
-    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(potential) * ctf_annular).real,normalize=True),\n",
     "    cmap=sample_cmap\n",
     ")\n",
+    "ctf.add_scalebar(ax_white_noise_obj,length=n//5,sampling=sampling,units=r'Å')\n",
     "\n",
     "ax_sto_obj = axs[1,1]\n",
     "im_sto_obj = ax_sto_obj.imshow(\n",
     "    np.zeros((n,n)),vmin=0,vmax=1,\n",
-    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(sto_potential) * zero_pad_ctf_to_4qprobe).real,normalize=True),\n",
     "    cmap=sample_cmap\n",
     ")\n",
+    "sto_sampling = 23.67 / n  # Å\n",
+    "ctf.add_scalebar(ax_sto_obj,length=n//5,sampling=sto_sampling,units=r'Å')\n",
     "\n",
     "ax_mof_obj = axs[1,2]\n",
     "im_mof_obj = ax_mof_obj.imshow(\n",
     "    np.zeros((n,n)),vmin=0,vmax=1,\n",
-    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(mof_potential) * zero_pad_ctf_to_4qprobe).real,normalize=True),\n",
     "    cmap=sample_cmap\n",
     ")\n",
+    "mof_sampling = 4.48 / n  # nm\n",
+    "ctf.add_scalebar(ax_mof_obj,length=n//5,sampling=mof_sampling,units=r'nm')\n",
     "\n",
     "ax_apo_obj = axs[1,3]\n",
     "im_apo_obj = ax_apo_obj.imshow(\n",
     "    np.zeros((n,n)),vmin=0,vmax=1,\n",
-    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(apo_potential) * zero_pad_ctf_to_4qprobe).real,normalize=True),\n",
     "    cmap=sample_cmap\n",
     ")\n",
+    "apo_sampling = 19.2 / n  # nm\n",
+    "ctf.add_scalebar(ax_apo_obj,length=n//5,sampling=apo_sampling,units=r'nm')\n",
+    "\n",
     "\n",
     "fig.tight_layout()\n",
     "fig.canvas.resizable = False\n",
     "fig.canvas.header_visible = False\n",
     "fig.canvas.footer_visible = False\n",
-    "fig.canvas.toolbar_visible = True\n",
-    "fig.canvas.toolbar_position = 'bottom'\n",
+    "fig.canvas.toolbar_visible = False\n",
+    "# fig.canvas.toolbar_visible = True\n",
+    "# fig.canvas.toolbar_position = 'bottom'\n",
     "fig.canvas.layout.width = '640px'\n",
-    "fig.canvas.layout.height = '400px'\n",
+    "fig.canvas.layout.height = '420px'\n",
     "fig.tight_layout()\n",
     "# fig"
    ]
@@ -912,7 +918,13 @@
     "        plot_ctf_pixelated.set_ydata(I_bins_pixelated)\n",
     "    \n",
     "    ax_ctf_rad.collections[0].remove()\n",
-    "    ax_ctf_rad.vlines([inner_collection_angle_slider.value,outer_collection_angle_slider.value],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "    ax_ctf_rad.vlines(\n",
+    "        [\n",
+    "            inner_collection_angle_slider.value,\n",
+    "            outer_collection_angle_slider.value\n",
+    "        ],0,2,\n",
+    "        colors='k',linestyles='--',linewidth=1,\n",
+    "    )\n",
     "\n",
     "    im_ctf.set_alpha(1)\n",
     "    im_white_noise_obj.set_alpha(1)\n",
@@ -936,7 +948,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c6063319b894a718516047dd443d0eb",
+       "model_id": "90a7d6d5cf17465f8841785476a49721",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1019,11 +1031,7 @@
     "        'number_of_segments':number_of_segments_slider,\n",
     "        'rotation_offset':rotation_offset_slider,\n",
     "    }\n",
-    ")\n",
-    "# inner_collection_angle_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
-    "# outer_collection_angle_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
-    "# number_of_segments_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
-    "# rotation_offset_slider.observe(update_virtual_and_pixelated_trotters,names='value')"
+    ")"
    ]
   },
   {
@@ -1107,7 +1115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7262c888aa34ade8e42b22cdc48bb45",
+       "model_id": "98805b9243264992b765e2ff68541b92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1143,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05c65fb6-3b6b-4e2a-ad44-e330a7e6d6ab",
+   "id": "337fae12-955b-4f0a-9a63-c0406b39a35b",
    "metadata": {},
    "outputs": [],
    "source": []
