--- a/notebooks/02_ptycho_contrast_transfer.ipynb
+++ b/notebooks/02_ptycho_contrast_transfer.ipynb
@@ -520,14 +520,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "423a198a-4782-4ac5-915f-95ec474abde5",
    "metadata": {},
    "outputs": [],
    "source": [
     "with plt.ioff():\n",
     "    dpi=72\n",
-    "    fig, axs = plt.subplots(2,4,figsize=(640/dpi,360/dpi),dpi=dpi)\n",
+    "    fig, axs = plt.subplots(2,4,figsize=(640/dpi,400/dpi),dpi=dpi)\n",
     "\n",
     "# detector\n",
     "ax_detector = axs[0,0]\n",
@@ -575,23 +575,20 @@
     "ax_ctf_rad.vlines([q_probe/2,q_probe*1.05],0,2,colors='k',linestyles='--',linewidth=1,)\n",
     "ax_ctf_rad.set_xticks([0,q_probe,q_max])\n",
     "ax_ctf_rad.set_xticklabels([0,1,2])\n",
+    "ax_ctf_rad.set_aspect(2)\n",
     "ax_ctf_rad.set_xlabel(r\"spatial frequency, $q/q_{\\mathrm{probe}}$\")\n",
     "\n",
     "ax_white_noise_obj = axs[1,0]\n",
     "im_white_noise_obj = ax_white_noise_obj.imshow(\n",
     "    np.zeros((n,n)),vmin=0,vmax=1,\n",
-    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(potential) * ctf_annular).real,normalize=True),\n",
     "    cmap=sample_cmap\n",
     ")\n",
-    "# ctf.add_scalebar(ax,length=n//4,sampling=reciprocal_sampling,units=r'$q_{\\mathrm{probe}}$')\n",
+    "ctf.add_scalebar(ax_white_noise_obj,length=n//5,sampling=sampling,units=r'Å')\n",
     "\n",
-    "# zero_pad_ctf_to_4qprobe = np.fft.ifftshift(np.pad(np.fft.fftshift(ctf_annular),48))\n",
-    "# resample_2qprobe_ctf_to_192  = np.fft.fft2(np.fft.ifftshift(np.pad(np.fft.fftshift(np.fft.ifft2(ctf_annular).real),48)))\n",
     "\n",
     "ax_sto_obj = axs[1,1]\n",
     "im_sto_obj = ax_sto_obj.imshow(\n",
     "    np.zeros((n,n)),vmin=0,vmax=1,\n",
-    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(sto_potential) * zero_pad_ctf_to_4qprobe).real,normalize=True),\n",
     "    cmap=sample_cmap\n",
     ")\n",
     "sto_sampling = 23.67 / n  # Å\n",
@@ -600,7 +597,6 @@
     "ax_mof_obj = axs[1,2]\n",
     "im_mof_obj = ax_mof_obj.imshow(\n",
     "    np.zeros((n,n)),vmin=0,vmax=1,\n",
-    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(mof_potential) * zero_pad_ctf_to_4qprobe).real,normalize=True),\n",
     "    cmap=sample_cmap\n",
     ")\n",
     "mof_sampling = 4.48 / n  # nm\n",
@@ -609,7 +605,6 @@
     "ax_apo_obj = axs[1,3]\n",
     "im_apo_obj = ax_apo_obj.imshow(\n",
     "    np.zeros((n,n)),vmin=0,vmax=1,\n",
-    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(apo_potential) * zero_pad_ctf_to_4qprobe).real,normalize=True),\n",
     "    cmap=sample_cmap\n",
     ")\n",
     "apo_sampling = 19.2 / n  # nm\n",
@@ -619,17 +614,18 @@
     "fig.canvas.resizable = False\n",
     "fig.canvas.header_visible = False\n",
     "fig.canvas.footer_visible = False\n",
-    "fig.canvas.toolbar_visible = True\n",
-    "fig.canvas.toolbar_position = 'bottom'\n",
+    "fig.canvas.toolbar_visible = False\n",
+    "# fig.canvas.toolbar_visible = True\n",
+    "# fig.canvas.toolbar_position = 'bottom'\n",
     "fig.canvas.layout.width = '640px'\n",
-    "fig.canvas.layout.height = '385px'\n",
+    "fig.canvas.layout.height = '420px'\n",
     "fig.tight_layout()\n",
     "# fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "b9ee0d10-81e7-409f-98e8-3e789f727a34",
    "metadata": {},
    "outputs": [],
@@ -820,7 +816,10 @@
     ")\n",
     "\n",
     "simulation_pbar = tqdm(total=9,display=False)\n",
-    "simulation_pbar_wrapper = ipywidgets.HBox(simulation_pbar.container.children[:2],layout=ipywidgets.Layout(width=\"160px\"))\n",
+    "simulation_pbar_wrapper = ipywidgets.HBox(\n",
+    "    simulation_pbar.container.children[:2],\n",
+    "    layout=ipywidgets.Layout(width=\"160px\")\n",
+    ")\n",
     "\n",
     "def defocus_wrapper(*args):\n",
     "    reset_wrapper()\n",
@@ -913,15 +912,21 @@
     "\n",
     "iterate_button.on_click(click_wrapper)\n",
     "outer_reconstruct_pbar = tqdm(total=4,display=False)\n",
-    "outer_reconstruct_pbar_wrapper = ipywidgets.HBox(outer_reconstruct_pbar.container.children[:2],layout=ipywidgets.Layout(width=\"160px\"))\n",
+    "outer_reconstruct_pbar_wrapper = ipywidgets.HBox(\n",
+    "    outer_reconstruct_pbar.container.children[:2],\n",
+    "    layout=ipywidgets.Layout(width=\"160px\")\n",
+    ")\n",
     "\n",
     "inner_reconstruct_pbar = tqdm(total=9,display=False)\n",
-    "inner_reconstruct_pbar_wrapper = ipywidgets.HBox(inner_reconstruct_pbar.container.children[:2],layout=ipywidgets.Layout(width=\"160px\"))"
+    "inner_reconstruct_pbar_wrapper = ipywidgets.HBox(\n",
+    "    inner_reconstruct_pbar.container.children[:2],\n",
+    "    layout=ipywidgets.Layout(width=\"160px\")\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "bc786741-ac7d-488a-b4e5-14e3c9c81fa7",
    "metadata": {},
    "outputs": [],
@@ -973,7 +978,13 @@
     "\n",
     "    # vlines\n",
     "    ax_ctf_rad.collections[0].remove()\n",
-    "    ax_ctf_rad.vlines([inner_collection_angle_slider.value,outer_collection_angle_slider.value],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "    ax_ctf_rad.vlines(\n",
+    "        [\n",
+    "            inner_collection_angle_slider.value,\n",
+    "            outer_collection_angle_slider.value\n",
+    "        ],0,2,\n",
+    "        colors='k',linestyles='--',linewidth=1,\n",
+    "    )\n",
     "\n",
     "    im_ctf_dpc.set_alpha(1)\n",
     "    plot_ctf_dpc.set_alpha(1)\n",
@@ -1000,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "0ef3d7a4-fb8b-4e85-ba91-a86b29943f63",
    "metadata": {},
    "outputs": [],
@@ -1021,14 +1032,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11806d9901cc4b079c981fa1a28e2528",
+       "model_id": "2f83221044f44402a9fc6dd6d2e3b607",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1042,7 +1053,7 @@
    ],
    "source": [
     "#| label: app:annular_segmented_iterative_ptycho\n",
-    "# Annular Segmented Detectors\n",
+    "# Iterative Ptycho Annular Segmented Detectors\n",
     "display(\n",
     "    ipywidgets.VBox(\n",
     "        [\n",
@@ -1066,15 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd1e2f57-c7f2-4abe-b29e-a48504e77fe7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7214e01-a636-4d04-aec5-b95bcbbea8bb",
+   "id": "2a7dd059-7547-44f2-88f4-0b89b2a8471c",
    "metadata": {},
    "outputs": [],
    "source": []
