clarify defocus sliders

--- a/notebooks/05_ptycho_contrast_transfer.ipynb
+++ b/notebooks/05_ptycho_contrast_transfer.ipynb
@@ -806,7 +806,7 @@
     "\n",
     "defocus_slider = ipywidgets.IntSlider(\n",
     "    value = 0, min = -n, max = n, step = 1,\n",
-    "    description = \"defocus [Å]\",\n",
+    "    description = \"negative defocus, $C_{1,0}$ [Å]\",\n",
     "    **kwargs\n",
     ")\n",
     "\n",
