--- a/notebooks/03_icom_contrast_transfer.ipynb
+++ b/notebooks/03_icom_contrast_transfer.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "id": "45f7df1f-47b6-4754-abe3-6196941ec5a9",
    "metadata": {},
    "outputs": [],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "id": "68fa9425",
    "metadata": {},
    "outputs": [],
@@ -636,7 +636,7 @@
     "    min = -n,\n",
     "    max = n,\n",
     "    step = 1,\n",
-    "    description = r'defocus [Å]',\n",
+    "    description = r'negative defocus, $C_{1,0}$ [Å]',\n",
     "    **kwargs\n",
     ")\n",
     "\n",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "id": "d0d505b4",
    "metadata": {},
    "outputs": [],
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "id": "0a362424-6bcc-407f-989e-8482d066b853",
    "metadata": {},
    "outputs": [],
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "id": "3639cc18-73ed-4008-af56-33a847821dad",
    "metadata": {},
    "outputs": [],
@@ -866,19 +866,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "id": "b4e23fec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "805419560fbf40aab079b082148a4070",
+       "model_id": "3901548e5c8148c3811d2f643c93a02a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=0, continuous_update=False, description='defocus …"
+       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=0, continuous_update=False, description='negative…"
       ]
      },
      "metadata": {},
