add pixelated parallax, correct icom

--- a/notebooks/analytical-pixelated-parallax.ipynb
+++ b/notebooks/analytical-pixelated-parallax.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Pixelated iCOM  \n",
+    "title: Pixelated Parallax  \n",
     "authors: [Julie Marie Bekkevold, Georgios Varnavides]  \n",
     "date: 2025-04-09  \n",
     "---"
@@ -45,10 +45,9 @@
     "reciprocal_sampling = 2 * q_max / n # inverse Angstroms\n",
     "bin_value = n // 96\n",
     "\n",
-    "C10 = 0\n",
+    "C10 = -128\n",
     "C30 = 0\n",
     "\n",
-    "# cmap = cmr.eclipse\n",
     "cmap = cmr.viola\n",
     "sample_cmap = 'gray'\n",
     "icom_line_color = 'cornflowerblue'"
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "d3230003-9fb3-4e9e-88b1-9ca724cc23c1",
    "metadata": {},
    "outputs": [],
@@ -106,27 +105,12 @@
     "    order_2 = alpha**2 / 2 * C10 \n",
     "    order_4 = alpha**4 / 4 * C30\n",
     "    \n",
-    "    return (order_2 + order_4) * prefactor\n",
-    "\n",
-    "def return_complex_probe(\n",
-    "    q,\n",
-    "    wavelength,\n",
-    "    C10,\n",
-    "    C30\n",
-    "):\n",
-    "    \"\"\" \"\"\"\n",
-    "    chi = return_chi(\n",
-    "        q,\n",
-    "        wavelength,\n",
-    "        C10,\n",
-    "        C30\n",
-    "    )\n",
-    "    return probe_array_fourier_0 * np.exp(-1j*chi)"
+    "    return (order_2 + order_4) * prefactor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "667850ca-2492-45c0-ba70-3f44898f8e1f",
    "metadata": {},
    "outputs": [],
@@ -144,20 +128,21 @@
     ")\n",
     "probe_array_fourier_0 /= np.sqrt(np.sum(np.abs(probe_array_fourier_0)**2))\n",
     "\n",
-    "complex_probe = return_complex_probe(\n",
+    "chi = return_chi(\n",
     "    q,\n",
     "    wavelength,\n",
     "    C10,\n",
     "    C30\n",
     ")\n",
+    "sin_chi = -np.sin(chi)\n",
     "\n",
-    "icom_ctf_2D = autocorrelation(complex_probe)\n",
+    "parallax_ctf_2D = autocorrelation(probe_array_fourier_0) * sin_chi\n",
     "q_bins, I_bins = ctf.radially_average_ctf(\n",
-    "    icom_ctf_2D,\n",
+    "    parallax_ctf_2D,\n",
     "    (sampling,sampling)\n",
     ")\n",
     "\n",
-    "binned_ctf_to_96 = icom_ctf_2D.reshape(\n",
+    "binned_ctf_to_96 = np.abs(parallax_ctf_2D).reshape(\n",
     "    (\n",
     "        n//bin_value,\n",
     "        bin_value,\n",
@@ -191,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "b25defd9-28cb-4efc-8da6-2e74b6c87762",
    "metadata": {},
    "outputs": [],
@@ -202,7 +187,7 @@
     "\n",
     "im_ctf = axs[0].imshow(\n",
     "    np.fft.fftshift(\n",
-    "        icom_ctf_2D\n",
+    "        parallax_ctf_2D\n",
     "    ),\n",
     "    vmin=-1,\n",
     "    vmax=1,\n",
@@ -213,7 +198,7 @@
     "    length=n//4,\n",
     "    sampling=reciprocal_sampling,\n",
     "    units=r'$q_{\\mathrm{probe}}$',\n",
-    "    color=\"black\"\n",
+    "    color='black'\n",
     ")\n",
     "axs[0].set(xticks=[],yticks=[],title=\"contrast transfer function (CTF)\")\n",
     "\n",
@@ -227,8 +212,8 @@
     "\n",
     "axs[1].set(\n",
     "    xlim=[0,2],\n",
-    "    ylim=[-0.125,1],\n",
-    "    aspect= 2/1.125,\n",
+    "    ylim=[-1,1],\n",
+    "    aspect= 1,\n",
     "    xticks=[0,1,2],\n",
     "    yticks=[],\n",
     "    xlabel=r\"spatial frequency, $q/q_{\\mathrm{probe}}$\",\n",
@@ -236,13 +221,10 @@
     ")\n",
     "\n",
     "im_obj = axs[2].imshow(\n",
-    "    ctf.histogram_scaling(\n",
-    "        convolved_object_sto,\n",
-    "        normalize=True,\n",
-    "    ),\n",
+    "    convolved_object_sto,\n",
     "    cmap=sample_cmap,\n",
-    "    vmin=0,\n",
-    "    vmax=1\n",
+    "    vmin=sto_limits[0],\n",
+    "    vmax=sto_limits[1]\n",
     ")\n",
     "\n",
     "ctf.add_scalebar(\n",
@@ -250,7 +232,7 @@
     "    length=40,\n",
     "    sampling=sto_sampling,\n",
     "    units=r'Å',\n",
-    "    size_vertical=2,\n",
+    "    size_vertical=2\n",
     ")\n",
     "\n",
     "ctf.add_scalebar(\n",
@@ -287,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "5f4bd5b8-8f78-4bb9-98aa-6d30b0f57687",
    "metadata": {},
    "outputs": [],
@@ -299,7 +281,7 @@
     "kwargs_quarter = {'style':style,'layout':layout_quarter}\n",
     "\n",
     "C10_slider = ipywidgets.FloatSlider(\n",
-    "    value = 0,\n",
+    "    value = -128,\n",
     "    min = -500,\n",
     "    max = 500, \n",
     "    step = 1,\n",
@@ -322,20 +304,26 @@
     ")\n",
     "\n",
     "clim_button = ipywidgets.ToggleButton(\n",
-    "    value=True,\n",
+    "    value=False,\n",
     "    description=\"use relative scaling\",\n",
+    "    **kwargs_quarter\n",
+    ")\n",
+    "\n",
+    "phase_flip_button = ipywidgets.ToggleButton(\n",
+    "    value=True,\n",
+    "    description=\"correct phase flipping\",\n",
     "    **kwargs_quarter\n",
     ")\n",
     "\n",
     "object_dropdown = ipywidgets.Dropdown(\n",
     "    options=[(\"strontium titanate\",0),(\"molecular organic framework\",1),(\"apoferritin protein\",2)],\n",
-    "    **kwargs\n",
+    "    **kwargs_quarter\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "83ab6cfb-d7c6-4c15-b7de-935788e537af",
    "metadata": {},
    "outputs": [],
@@ -346,20 +334,25 @@
     "    C30 = C30_slider.value * 1e4\n",
     "    object_index = object_dropdown.value\n",
     "\n",
-    "    complex_probe = return_complex_probe(\n",
+    "    chi = return_chi(\n",
     "        q,\n",
     "        wavelength,\n",
     "        C10,\n",
     "        C30\n",
     "    )\n",
-    "    \n",
-    "    icom_ctf_2D = autocorrelation(complex_probe)\n",
+    "    sin_chi = -np.sin(chi)\n",
+    "    parallax_ctf_2D = autocorrelation(probe_array_fourier_0) * sin_chi\n",
     "    q_bins, I_bins = ctf.radially_average_ctf(\n",
-    "        icom_ctf_2D,\n",
+    "        parallax_ctf_2D,\n",
     "        (sampling,sampling)\n",
     "    )\n",
-    "    \n",
-    "    binned_ctf_to_96 = icom_ctf_2D.reshape(\n",
+    "\n",
+    "    if phase_flip_button.value:\n",
+    "        _parallax_ctf_2D = np.abs(parallax_ctf_2D)\n",
+    "    else:\n",
+    "        _parallax_ctf_2D = parallax_ctf_2D\n",
+    "        \n",
+    "    binned_ctf_to_96 = _parallax_ctf_2D.reshape(\n",
     "        (\n",
     "            n//bin_value,\n",
     "            bin_value,\n",
@@ -377,6 +370,9 @@
     "        np.fft.fft2(chosen_potential) * zero_pad_ctf_to_4qprobe\n",
     "    ).real\n",
     "\n",
+    "    im_ctf.set_data(np.fft.fftshift(parallax_ctf_2D))\n",
+    "    plot_ctf.set_ydata(I_bins)\n",
+    "    \n",
     "    if clim_button.value:\n",
     "        convolved_object = ctf.histogram_scaling(convolved_object,normalize=True)\n",
     "        im_obj.set_data(convolved_object)\n",
@@ -387,9 +383,6 @@
     "        vmin=limits[object_index][0],\n",
     "        vmax=limits[object_index][1]\n",
     "    )\n",
-    "\n",
-    "    im_ctf.set_data(np.fft.fftshift(icom_ctf_2D))\n",
-    "    plot_ctf.set_ydata(I_bins)\n",
     "    sto_scalebar.set_visible(object_index==0)\n",
     "    mof_scalebar.set_visible(object_index==1)\n",
     "    apo_scalebar.set_visible(object_index==2)\n",
@@ -407,37 +400,38 @@
     "    return None\n",
     "\n",
     "scherzer_button.on_click(apply_scherzer)\n",
-    "clim_button.observe(update_ctf,\"value\")"
+    "clim_button.observe(update_ctf,\"value\")\n",
+    "phase_flip_button.observe(update_ctf,\"value\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "5dcc33f2-9a57-4785-b4f3-ac83b8f2ae62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54139a2b8bb046c09f483cd9a47bcf6a",
+       "model_id": "b99dd0f1425445c5be5201d82e72f89f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.0, description='negative defocus, $C_{1,0}$ [Å]', layout=Lay…"
+       "VBox(children=(HBox(children=(FloatSlider(value=-500.0, description='negative defocus, $C_{1,0}$ [Å]', layout=…"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#| label: app:icom_analytic\n",
+    "#| label: app:parallax_analytic\n",
     "ipywidgets.VBox(\n",
     "    [\n",
     "        ipywidgets.HBox([C10_slider,C30_slider]),\n",
-    "        ipywidgets.HBox([scherzer_button,clim_button,object_dropdown]),\n",
+    "        ipywidgets.HBox([scherzer_button,clim_button,phase_flip_button,object_dropdown]),\n",
     "        fig.canvas\n",
     "    ]\n",
     ")"
@@ -446,7 +440,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a61a98f2-516c-43b6-9acc-7e721d2d5940",
+   "id": "36b2a59e-a360-468d-8d89-69a3d9f7e484",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3778f23-f446-4e3c-8e92-81fdb77ec0f9",
    "metadata": {},
    "outputs": [],
    "source": []
