make segmented widgets consistent

--- a/notebooks/04_ssb_contrast_transfer.ipynb
+++ b/notebooks/04_ssb_contrast_transfer.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2653fe5c-f3c0-4e22-9408-a99c485b25f5",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "82c1144c-7010-4b9d-a67a-72973e36da00",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "91d6e5e2-d451-4242-8a5b-3fdca5814ed0",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7de666e8-0c61-41bb-a8ac-7056504b9a88",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "dda6054c-2d9c-449c-b0d6-74ffdedada8a",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5582e59d-87c4-48ba-8b67-c5a8c47a98aa",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c720648a-4b46-41cf-bca4-0a8568e4a587",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "76b18463-b935-45ff-8335-50e4a15d29b7",
    "metadata": {},
    "outputs": [],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1ef2e8b6-4825-43a0-bf34-09546ca17033",
    "metadata": {},
    "outputs": [],
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "82f3fcc2-ae1f-4a96-9beb-f27c7f47c8b5",
    "metadata": {},
    "outputs": [],
@@ -535,19 +535,19 @@
     "\n",
     "ax_ctf_rad = axs[0,3]\n",
     "plot_ctf_pixelated = ax_ctf_rad.plot(q_bins_pixelated,I_bins_pixelated,color='k',label='pixelated')[0]\n",
-    "plot_ctf = ax_ctf_rad.plot(np.linspace(0,q_max,n//2 + 1),np.zeros(n//2 + 1),color=ssb_line_color,label='annular')[0]\n",
+    "plot_ctf = ax_ctf_rad.plot(np.linspace(0,q_max,n//2 + 1),np.zeros(n//2 + 1),color=ssb_line_color,label='segmented')[0]\n",
     "\n",
     "for ax, title in zip(\n",
     "    axs.flatten(),\n",
     "    [\n",
     "        \"pixelated trotter\",\n",
-    "        \"annular trotter\",\n",
-    "        \"annular CTF\",\n",
-    "        \"radially-averaged CTFs\",\n",
+    "        \"segmented trotter\",\n",
+    "        \"segmented CTF\",\n",
+    "        \"radially-averaged CTF\",\n",
     "        \"white noise object\",\n",
-    "        \"STO sample\",\n",
-    "        \"MOF sample\",\n",
-    "        \"Apoferritin sample\",\n",
+    "        \"strontium titanate\",\n",
+    "        \"metal-organic framework\",\n",
+    "        \"apoferritin protein\",\n",
     "    ]\n",
     "):\n",
     "    ax.set_xticks([])\n",
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f76ba5fb-d77d-462e-810b-f13424740697",
    "metadata": {},
    "outputs": [],
@@ -651,7 +651,7 @@
     "    min = 3, \n",
     "    max = 16, \n",
     "    step = 1,\n",
-    "    description = \"number of segments\",\n",
+    "    description = \"number of annular segments\",\n",
     "    **kwargs\n",
     ")\n",
     "\n",
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "163a770e-5abb-4ab1-a8b2-c93a70d5d43c",
    "metadata": {},
    "outputs": [],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "17bf2470-4a2e-4bef-ad08-5d49f783e07e",
    "metadata": {},
    "outputs": [],
@@ -941,14 +941,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "4f1b0d36-99e8-4384-9f56-405e96bf896f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90a7d6d5cf17465f8841785476a49721",
+       "model_id": "1d45ddfa89f94b9c95f9783d936a2607",
        "version_major": 2,
        "version_minor": 0
       },
@@ -956,7 +956,7 @@
        "Output()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "cdf70485-bf65-4c95-99f8-6c1972ea4800",
    "metadata": {},
    "outputs": [],
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "667cd180-c2ad-4e47-8529-e5fcad8e512c",
    "metadata": {},
    "outputs": [],
@@ -1115,12 +1115,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98805b9243264992b765e2ff68541b92",
+       "model_id": "6825825e558b451daefdb21d0bdc078c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=0, continuous_update=False, description='defocus …"
+       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=0, continuous_update=False, description='negative…"
       ]
      },
      "metadata": {},
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "337fae12-955b-4f0a-9a63-c0406b39a35b",
+   "id": "69784c54-7a60-4a60-ab4a-a33449ea264e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1173,7 +1173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
