--- a/notebooks/05_ptycho_contrast_transfer.ipynb
+++ b/notebooks/05_ptycho_contrast_transfer.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "2653fe5c-f3c0-4e22-9408-a99c485b25f5",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "ffa668f1-8fa3-4eef-9c68-4d4d081b3817",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "71d0b5b8-198d-4602-9d49-9b01fa5829b9",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "2667f3e5-136a-4703-9f74-bd7e91e98a0f",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "6d620ca7-35bb-4e1c-b34f-02d6e1906e8f",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "12634cda",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "7ba8d4e6-6bf2-4f32-ad29-87d6ffb71444",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "1571ad13-e05c-4f10-bf48-c403dc690d00",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "16571668-958d-4fe6-bb5f-cef819ebd920",
    "metadata": {},
    "outputs": [],
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "adadb014-b74d-4957-b2f8-380277a9a6e3",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "423a198a-4782-4ac5-915f-95ec474abde5",
    "metadata": {},
    "outputs": [],
@@ -543,10 +543,10 @@
     "\n",
     "# analytic CTF radially-averaged\n",
     "ax_ctf_rad = axs[0,3]\n",
-    "plot_ctf_dpc_analytical = ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k',label='analytical iCOM')[0]\n",
+    "plot_ctf_dpc_analytical = ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k',label='pixelated iCOM')[0]\n",
     "\n",
-    "plot_ctf_dpc = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=icom_line_color,label='annular iCOM')[0]\n",
-    "plot_ctf_ptycho = ax_ctf_rad.plot(q_bins_annular, np.zeros_like(I_bins_analytic), color=iter_ptycho_line_color,label='annular ptycho')[0]\n",
+    "plot_ctf_dpc = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=icom_line_color,label='segmented iCOM')[0]\n",
+    "plot_ctf_ptycho = ax_ctf_rad.plot(q_bins_annular, np.zeros_like(I_bins_analytic), color=iter_ptycho_line_color,label='segmented ptycho')[0]\n",
     "ax_ctf_rad.legend()\n",
     "\n",
     "# remove ticks, add titles to 2D-plots\n",
@@ -554,13 +554,13 @@
     "    axs.flatten(),\n",
     "    [\n",
     "        \"detector geometry\",\n",
-    "        \"annular iCOM CTF\",\n",
-    "        \"annular ptycho CTF\",\n",
-    "        \"radially averaged CTFs\",\n",
+    "        \"segmented iCOM CTF\",\n",
+    "        \"segmented ptycho CTF\",\n",
+    "        \"radially averaged CTF\",\n",
     "        \"white noise object\",\n",
-    "        \"STO sample\",\n",
-    "        \"MOF sample\",\n",
-    "        \"Apoferritin sample\",\n",
+    "        \"strontium titanate\",\n",
+    "        \"metal-organic framework\",\n",
+    "        \"apoferritin protein\",\n",
     "    ]\n",
     "):\n",
     "    ax.set_xticks([])\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "b9ee0d10-81e7-409f-98e8-3e789f727a34",
    "metadata": {},
    "outputs": [],
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "id": "80821142-9b72-4a66-a841-da4d439ea99e",
    "metadata": {},
    "outputs": [],
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "id": "95b1a1e1-6381-4554-b108-84fb91ab5566",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
     "    min = 3, \n",
     "    max = 16, \n",
     "    step = 1,\n",
-    "    description = \"number of segments\",\n",
+    "    description = \"number of annular segments\",\n",
     "    **kwargs\n",
     ")\n",
     "\n",
@@ -789,7 +789,7 @@
     ")\n",
     "\n",
     "iterations_slider = ipywidgets.IntSlider(\n",
-    "    value = 4, min = 1, max = 8, step = 1,\n",
+    "    value = 4, min = 1, max = 32, step = 1,\n",
     "    description = \"(outer loop) iterations\",\n",
     "    **kwargs\n",
     ")\n",
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "bc786741-ac7d-488a-b4e5-14e3c9c81fa7",
    "metadata": {},
    "outputs": [],
@@ -1006,12 +1006,13 @@
     "inner_collection_angle_slider.observe(update_figure,names='value')\n",
     "outer_collection_angle_slider.observe(update_figure,names='value')\n",
     "number_of_segments_slider.observe(update_figure,names='value')\n",
-    "rotation_offset_slider.observe(update_figure,names='value')"
+    "rotation_offset_slider.observe(update_figure,names='value')\n",
+    "iterate_button.button_style = 'warning'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "id": "0ef3d7a4-fb8b-4e85-ba91-a86b29943f63",
    "metadata": {},
    "outputs": [],
@@ -1032,19 +1033,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f83221044f44402a9fc6dd6d2e3b607",
+       "model_id": "c6516145c6bf45b7af74956e1541f901",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=0, continuous_update=False, description='defocus …"
+       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=0, continuous_update=False, description='negative…"
       ]
      },
      "metadata": {},
@@ -1077,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a7dd059-7547-44f2-88f4-0b89b2a8471c",
+   "id": "636a0a5e-1764-4a59-a605-2a8afa94e257",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1099,7 +1100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
