--- a/notebooks/analytical-pixelated-iCOM.ipynb
+++ b/notebooks/analytical-pixelated-iCOM.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "7019266a-41f6-4dfc-8ded-a8a7289cb45c",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "dd235aa2-fd71-4a1c-8217-31db31a5d1c7",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "b1179799-7267-4776-a32c-917a1c8259a1",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "d3230003-9fb3-4e9e-88b1-9ca724cc23c1",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "667850ca-2492-45c0-ba70-3f44898f8e1f",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "b25defd9-28cb-4efc-8da6-2e74b6c87762",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "5f4bd5b8-8f78-4bb9-98aa-6d30b0f57687",
    "metadata": {},
    "outputs": [],
@@ -328,14 +328,14 @@
     ")\n",
     "\n",
     "object_dropdown = ipywidgets.Dropdown(\n",
-    "    options=[(\"strontium titanate\",0),(\"molecular organic framework\",1),(\"apoferritin protein\",2)],\n",
+    "    options=[(\"strontium titanate\",0),(\"metal-organic framework\",1),(\"apoferritin protein\",2)],\n",
     "    **kwargs\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "83ab6cfb-d7c6-4c15-b7de-935788e537af",
    "metadata": {},
    "outputs": [],
@@ -412,14 +412,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "5dcc33f2-9a57-4785-b4f3-ac83b8f2ae62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54139a2b8bb046c09f483cd9a47bcf6a",
+       "model_id": "29b1735691234392b7f6dbd286ccb6f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -427,7 +427,7 @@
        "VBox(children=(HBox(children=(FloatSlider(value=0.0, description='negative defocus, $C_{1,0}$ [Å]', layout=Lay…"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
