--- a/notebooks/analytical-pixelated-parallax.ipynb
+++ b/notebooks/analytical-pixelated-parallax.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5f4bd5b8-8f78-4bb9-98aa-6d30b0f57687",
    "metadata": {},
    "outputs": [],
@@ -316,14 +316,14 @@
     ")\n",
     "\n",
     "object_dropdown = ipywidgets.Dropdown(\n",
-    "    options=[(\"strontium titanate\",0),(\"molecular organic framework\",1),(\"apoferritin protein\",2)],\n",
+    "    options=[(\"strontium titanate\",0),(\"metal-organic framework\",1),(\"apoferritin protein\",2)],\n",
     "    **kwargs_quarter\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "83ab6cfb-d7c6-4c15-b7de-935788e537af",
    "metadata": {},
    "outputs": [],
@@ -406,22 +406,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "5dcc33f2-9a57-4785-b4f3-ac83b8f2ae62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b99dd0f1425445c5be5201d82e72f89f",
+       "model_id": "415f7cded4e24bdbb2b859ad00f980e6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=-500.0, description='negative defocus, $C_{1,0}$ [Å]', layout=…"
+       "VBox(children=(HBox(children=(FloatSlider(value=-128.0, description='negative defocus, $C_{1,0}$ [Å]', layout=…"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
