--- a/notebooks/analytical-pixelated-SSB.ipynb
+++ b/notebooks/analytical-pixelated-SSB.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "dd235aa2-fd71-4a1c-8217-31db31a5d1c7",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "b1179799-7267-4776-a32c-917a1c8259a1",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "d3230003-9fb3-4e9e-88b1-9ca724cc23c1",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "667850ca-2492-45c0-ba70-3f44898f8e1f",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "b25defd9-28cb-4efc-8da6-2e74b6c87762",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "5f4bd5b8-8f78-4bb9-98aa-6d30b0f57687",
    "metadata": {},
    "outputs": [],
@@ -335,14 +335,14 @@
     ")\n",
     "\n",
     "object_dropdown = ipywidgets.Dropdown(\n",
-    "    options=[(\"strontium titanate\",0),(\"molecular organic framework\",1),(\"apoferritin protein\",2)],\n",
+    "    options=[(\"strontium titanate\",0),(\"metal-organic framework\",1),(\"apoferritin protein\",2)],\n",
     "    **kwargs\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "83ab6cfb-d7c6-4c15-b7de-935788e537af",
    "metadata": {},
    "outputs": [],
@@ -419,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "5dcc33f2-9a57-4785-b4f3-ac83b8f2ae62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "662fa43b843a4e4ca2e96b04b3b2a51e",
+       "model_id": "0cbb06312ed043fe819e445480f8291d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -434,7 +434,7 @@
        "VBox(children=(HBox(children=(FloatSlider(value=0.0, description='negative defocus, $C_{1,0}$ [Å]', layout=Lay…"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
