--- a/notebooks/pixelated_iterative_ptycho.ipynb
+++ b/notebooks/pixelated_iterative_ptycho.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "2653fe5c-f3c0-4e22-9408-a99c485b25f5",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "8779f9b8-435c-4370-9031-dbf6b1bd4252",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "71d0b5b8-198d-4602-9d49-9b01fa5829b9",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "2667f3e5-136a-4703-9f74-bd7e91e98a0f",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "6d620ca7-35bb-4e1c-b34f-02d6e1906e8f",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "12634cda",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "adadb014-b74d-4957-b2f8-380277a9a6e3",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "fca5307c-b7f4-4764-a853-5fd339b3f863",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "423a198a-4782-4ac5-915f-95ec474abde5",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "b9ee0d10-81e7-409f-98e8-3e789f727a34",
    "metadata": {},
    "outputs": [],
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "80821142-9b72-4a66-a841-da4d439ea99e",
    "metadata": {},
    "outputs": [],
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "95b1a1e1-6381-4554-b108-84fb91ab5566",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
     ")\n",
     "\n",
     "iterations_slider = ipywidgets.IntSlider(\n",
-    "    value = 8, min = 1, max = 64, step = 1,\n",
+    "    value = 4, min = 1, max = 32, step = 1,\n",
     "    description = \"(outer loop) iterations\",\n",
     "    **kwargs\n",
     ")\n",
@@ -612,7 +612,7 @@
     ")\n",
     "\n",
     "object_dropdown = ipywidgets.Dropdown(\n",
-    "    options=[(\"white noise object\",0),(\"strontium titanate\",1),(\"molecular organic framework\",2),(\"apoferritin protein\",3)],\n",
+    "    options=[(\"white noise object\",0),(\"strontium titanate\",1),(\"metal-organic framework\",2),(\"apoferritin protein\",3)],\n",
     "    **kwargs\n",
     ")\n",
     "\n",
@@ -689,19 +689,26 @@
     "outer_reconstruct_pbar_wrapper = ipywidgets.HBox(outer_reconstruct_pbar.container.children[:2],layout=ipywidgets.Layout(width=\"160px\"))\n",
     "\n",
     "inner_reconstruct_pbar = tqdm(total=9,display=False)\n",
-    "inner_reconstruct_pbar_wrapper = ipywidgets.HBox(inner_reconstruct_pbar.container.children[:2],layout=ipywidgets.Layout(width=\"160px\"))"
+    "inner_reconstruct_pbar_wrapper = ipywidgets.HBox(inner_reconstruct_pbar.container.children[:2],layout=ipywidgets.Layout(width=\"160px\"))\n",
+    "\n",
+    "def update_current_ptycho_wrapper(*args):\n",
+    "    \"\"\" \"\"\"\n",
+    "    update_ptycho_panel(ptycho_recon[0])\n",
+    "    return None\n",
+    "\n",
+    "object_dropdown.observe(update_current_ptycho_wrapper,\"value\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b988e3673b5e4fc2b56568ffc404120f",
+       "model_id": "493afa5250884b8c9d920e76653091f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -709,14 +716,13 @@
        "VBox(children=(VBox(children=(HBox(children=(FloatSlider(value=0.0, continuous_update=False, description='nega…"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#| label: app:pixelated_icom_and_ptycho\n",
-    "# iCOM and Iteratice Ptycho with Pixelated Detectors\n",
     "ipywidgets.VBox(\n",
     "    [\n",
     "        ipywidgets.VBox(\n",
@@ -732,14 +738,6 @@
     "    ]\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "673b3a4e-2e33-4191-9892-f1e1fd52b052",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
